--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Micula_Antonia_Lab2"
         mc:Ignorable="d"
-        Title="Virtual Doughnuts  Factory" Height="450" Width="800" ResizeMode="NoResize" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}">
+        Title="Virtual Doughnuts  Factory" Height="450" Width="800" ResizeMode="NoResize" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}" Loaded="frmMain_Loaded">
     <Grid>
         <Label x:Name="lblTitle" Content="Doughnuts  - Bake &amp; Sale" HorizontalAlignment="Left" Margin="223,10,0,0" VerticalAlignment="Top" FontSize="24" FontWeight="Bold"/>
         <GroupBox x:Name="gbRaised_" Header="Raised" Margin="44,64,545,231" FontWeight="Bold">
@@ -13,7 +13,7 @@
                 <Label x:Name="lblGlazedRaised" Content="Glazed" Canvas.Left="10" Canvas.Top="10" FontWeight="Normal"/>
                 <TextBox x:Name="txtGlazedRaised" Canvas.Left="103" Canvas.Top="18" Text="0" TextWrapping="Wrap" Width="86" IsReadOnlyCaretVisible="True" FontWeight="Normal"/>
                 <Label x:Name="lblSugarRaised" Content="Sugar" Canvas.Left="15" Canvas.Top="66" FontWeight="Normal"/>
-                <TextBox x:Name="txtSugarRaised_" Canvas.Left="103" Canvas.Top="74" Text="0" TextWrapping="Wrap" Width="86" IsReadOnlyCaretVisible="True" FontWeight="Normal"/>
+                <TextBox x:Name="txtSugarRaised" Canvas.Left="103" Canvas.Top="74" Text="0" TextWrapping="Wrap" Width="86" IsReadOnlyCaretVisible="True" FontWeight="Normal"/>
             </Canvas>
         </GroupBox>
         <GroupBox x:Name="gbFilled" Header="Filled" Margin="454,39,88,231" FontWeight="Bold">
@@ -29,7 +29,7 @@
         <GroupBox x:Name="gbSale__" Header="Current Sale" Margin="44,208,74,10" FontWeight="Bold">
             <Canvas>
                 <Label x:Name="lblQuantity" Content="Quantity" Canvas.Left="29" Canvas.Top="28" FontWeight="Normal"/>
-                <TextBox x:Name="txtQuantity_" Canvas.Left="93" Canvas.Top="32" Text="0" TextWrapping="Wrap" Width="58" UndoLimit="0" FontWeight="Normal"/>
+                <TextBox x:Name="txtQuantity" Canvas.Left="93" Canvas.Top="32" Text="0" TextWrapping="Wrap" Width="58" UndoLimit="0" FontWeight="Normal" KeyUp="txtQuantity_KeyPress"/>
                 <Label x:Name="lblType" Content="Type" Canvas.Left="174" Canvas.Top="28" FontWeight="Normal"/>
                 <ComboBox x:Name="cmbType" Canvas.Left="216" Canvas.Top="30" Width="120"/>
                 <Label x:Name="lblPrice" Content="Price" Canvas.Left="367" Canvas.Top="28" FontWeight="Normal"/>
@@ -45,18 +45,17 @@
         <Menu x:Name="mnuMain" HorizontalAlignment="Left" Height="21" VerticalAlignment="Top" 
 Width="131" Margin="0,26,0,0">
             <MenuItem Header="File">
-                <MenuItem Header="Exit"/>
+                <MenuItem Header="Exit" Click="exitToolStripMenuItem_Click"/>
             </MenuItem>
             <MenuItem Header="_Doughnuts">
                 <MenuItem Header="Make">
                     <MenuItem Header="Raised">
-                        <MenuItem x:Name="glazedMenuItem" Header="Glazed"/>
-                        <MenuItem x:Name="sugarMenuItem" Header="Sugar"/>
+                        <MenuItem x:Name="glazedToolStripMenuItem" Header="Glazed" Click="glazedToolStripMenuItem_Click" IsCheckable="True"/>
+                        <MenuItem x:Name="sugarToolStripMenuItem" Header="Sugar" IsCheckable="True" Click="sugarToolStripMenuItem_Click" />
                     </MenuItem>
                     <MenuItem Header="Filled"/>
                 </MenuItem>
-                <MenuItem Header="Stop">
-                </MenuItem>
+                <MenuItem x:Name="mnuStop" Header="Stop" Click="stopToolStripMenuItem_Click"/>
             </MenuItem>
 
         </Menu>
